Feat: update test case with mockMVC